# PIC

./: .dockerignore  .gitignore  ATTACK_RESILIENCE_RESULTS.md  BRAIN_CELLAGENT_INTEGRATION_COMPLETE.md  BRAIN_INTEGRATION_COMPLETE.md  COMPLETE_STATUS.md  COMPLETION_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  Dockerfile  ENTERPRISE_SECURITY_COMPLETE_REPORT.md  ENTERPRISE_TESTING_CERTIFICATE.md  ENTERPRISE_TESTING_FILES_MANIFEST.md  ENTERPRISE_TESTING_FINAL_SUMMARY.md  ENTERPRISE_TESTING_INDEX.md  ENTERPRISE_TESTING_README.md  ENTERPRISE_TEST_SESSION_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_GITHUB_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  GITHUB_PUSH_SUMMARY.md  GOOD_MORNING_SUMMARY.md  HIGH_VOLUME_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  MANIFEST.in  MASTER_ENTERPRISE_TESTING_SUMMARY.md  MIPAB11_TEST_RESULTS.md  MIPAB11_TUNING_ATTEMPT1_RESULTS.md  MIPAB11_TUNING_SUMMARY.md  MIPAB9_OFFICIAL_TEST_OUTPUT.md  PROJECT_COMPLETE.md  README.md  REALWORLD_SUITE_SUMMARY.md  REALWORLD_TESTING_COMPLETE.md  REAL_WORLD_TESTING_GUIDE.md  START_HERE.md  comprehensive_test_runner.py  fix_reporting.py  fix_webservice.py  mipab11_runner.py  (+15 more)
.github/workflows/: ci.yml
.kiro/specs/brain-cellagent-integration/: design.md  requirements.md  tasks.md
.kiro/specs/pic-real-world-testing/: design.md  requirements.md  tasks.md
demo/: README.md  brain_integration_demo.py  demo.py  docker-compose.yml
docs/: brain_integration.md  quickstart.md
examples/vulnerable_apps/: README.md  fastapi_microservices.py  flask_vulnerable.py
src/pic/: __init__.py  cli.py  integrated.py
tests/: __init__.py
tests/integration/: test_brain_cellagent_integration.py
tests/property/: test_anomaly_detection.py  test_audit_immutability.py  test_baseline_convergence.py  test_effector.py  test_graceful_failure.py  test_metrics.py  test_pii_redaction.py  test_signature_storage.py  test_telemetry_schema.py  test_validator.py
tests/security/: __init__.py  test_comprehensive_security.py
tests/unit/: test_config.py  test_crypto.py
(+66 files in other folders)
